// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for open: false, background: canvas and dismissButton: false 1`] = `
":host {
  display: contents;
  --ref-p-sheet-pt: var(--p-spacing-fluid-md) !important;
  --ref-p-sheet-pb: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md)) !important;
  --ref-p-sheet-px: var(--p-spacing-fluid-lg) !important;
  --pds-internal-grid-outer-column: calc(var(--p-spacing-fluid-lg) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(var(--p-spacing-fluid-lg) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_p-dialog-a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  all: unset;
  position: fixed;
  inset: 0;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  user-select: text;
  outline: 0;
  width: 0px;
  height: 0px;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration,var(--p-duration-md)), width 0s linear var(--p-transition-duration,var(--p-duration-md)), height 0s linear var(--p-transition-duration,var(--p-duration-md)), background-color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out);
  overlay: none;
}
dialog:modal {
  overlay: auto;
}
dialog::backdrop {
  display: none;
}
@supports (overlay: auto) and (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration,var(--p-duration-md)), width 0s linear var(--p-transition-duration,var(--p-duration-md)), height 0s linear var(--p-transition-duration,var(--p-duration-md)), background-color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), overlay var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
  transform: translate3d(0,0,0);
}
.sheet {
  position: relative;
  display: grid;
  grid-template: auto/var(--p-spacing-fluid-sm) minmax(0,1fr) var(--p-spacing-fluid-sm);
  gap: var(--p-spacing-fluid-md) calc(var(--p-spacing-fluid-lg) - var(--p-spacing-fluid-sm));
  padding-top: var(--p-spacing-fluid-md);
  padding-bottom: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md));
  align-content: flex-start;
  transform: translate3d(0,25vh,0);
  color: var(--p-color-primary);
  background: var(--_p-dialog-a);
  opacity: 0;
  transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out), transform var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out);
  width: 100%;
  align-self: flex-end;
  margin-block-start: var(--p-spacing-fluid-lg);
  border-top-left-radius: var(--p-radius-3xl);
  border-top-right-radius: var(--p-radius-3xl);
  clip-path: inset(0 round var(--p-radius-3xl) var(--p-radius-3xl) 0 0);
}
.sheet:dir(rtl) {
  transform: translate3d(0,25vh,0);
}
@media(forced-colors:active) {
  .sheet {
    border-top: 2px solid CanvasText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: false, background: canvas and dismissButton: true 1`] = `
":host {
  display: contents;
  --ref-p-sheet-pt: var(--p-spacing-fluid-md) !important;
  --ref-p-sheet-pb: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md)) !important;
  --ref-p-sheet-px: var(--p-spacing-fluid-lg) !important;
  --pds-internal-grid-outer-column: calc(var(--p-spacing-fluid-lg) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(var(--p-spacing-fluid-lg) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_p-dialog-a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  all: unset;
  position: fixed;
  inset: 0;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  user-select: text;
  outline: 0;
  width: 0px;
  height: 0px;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration,var(--p-duration-md)), width 0s linear var(--p-transition-duration,var(--p-duration-md)), height 0s linear var(--p-transition-duration,var(--p-duration-md)), background-color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out);
  overlay: none;
}
dialog:modal {
  overlay: auto;
}
dialog::backdrop {
  display: none;
}
@supports (overlay: auto) and (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration,var(--p-duration-md)), width 0s linear var(--p-transition-duration,var(--p-duration-md)), height 0s linear var(--p-transition-duration,var(--p-duration-md)), background-color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), overlay var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
  transform: translate3d(0,0,0);
}
.sheet {
  position: relative;
  display: grid;
  grid-template: auto/var(--p-spacing-fluid-sm) minmax(0,1fr) var(--p-spacing-fluid-sm);
  gap: var(--p-spacing-fluid-md) calc(var(--p-spacing-fluid-lg) - var(--p-spacing-fluid-sm));
  padding-top: var(--p-spacing-fluid-md);
  padding-bottom: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md));
  align-content: flex-start;
  transform: translate3d(0,25vh,0);
  color: var(--p-color-primary);
  background: var(--_p-dialog-a);
  opacity: 0;
  transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out), transform var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out);
  width: 100%;
  align-self: flex-end;
  margin-block-start: var(--p-spacing-fluid-lg);
  border-top-left-radius: var(--p-radius-3xl);
  border-top-right-radius: var(--p-radius-3xl);
  clip-path: inset(0 round var(--p-radius-3xl) var(--p-radius-3xl) 0 0);
}
.sheet:dir(rtl) {
  transform: translate3d(0,25vh,0);
}
.dismiss {
  all: unset;
  box-sizing: border-box;
  display: grid;
  place-items: center;
  padding: 6px;
  border-radius: var(--p-radius-full);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: var(--p-spacing-fluid-sm);
  margin-top: calc(-1 * var(--p-spacing-fluid-md) + var(--p-spacing-fluid-sm));
  margin-inline-end: var(--p-spacing-fluid-sm);
  place-self: flex-start flex-end;
  filter: invert(1) brightness(1.02);
}
.dismiss:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.dismiss::before {
  content: "";
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m18 6.706-5.294 5.294 5.294 5.294-.706.706-5.294-5.294-5.294 5.294-.706-.706 5.294-5.294-5.294-5.294.706-.706 5.294 5.294 5.294-5.294z"/></svg>') center/contain no-repeat;
  mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m18 6.706-5.294 5.294 5.294 5.294-.706.706-5.294-5.294-5.294 5.294-.706-.706 5.294-5.294-5.294-5.294.706-.706 5.294 5.294 5.294-5.294z"/></svg>') center/contain no-repeat;
  background: currentColor;
}
.dismiss span {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .sheet {
    border-top: 2px solid CanvasText;
  }
  .dismiss {
    forced-color-adjust: none;
    background: Canvas;
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
  .dismiss:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background-color: var(--p-color-contrast-high);
  }
@media(forced-colors:active) {
    .dismiss:hover {
      background: Canvas;
    }
}

}
"
`;

exports[`getComponentCss() > should return correct css for open: true, background: canvas and dismissButton: true 1`] = `
":host {
  display: contents;
  --ref-p-sheet-pt: var(--p-spacing-fluid-md) !important;
  --ref-p-sheet-pb: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md)) !important;
  --ref-p-sheet-px: var(--p-spacing-fluid-lg) !important;
  --pds-internal-grid-outer-column: calc(var(--p-spacing-fluid-lg) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(var(--p-spacing-fluid-lg) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_p-dialog-a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  all: unset;
  position: fixed;
  inset: 0;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  user-select: text;
  outline: 0;
  width: 100dvw;
  height: 100dvh;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  transition: visibility 0s linear var(--p-transition-duration,0s), width 0s linear var(--p-transition-duration,0s), height 0s linear var(--p-transition-duration,0s), background-color var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in);
  overlay: none;
}
dialog:modal {
  overlay: auto;
}
dialog::backdrop {
  display: none;
}
@supports (overlay: auto) and (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration,0s), width 0s linear var(--p-transition-duration,0s), height 0s linear var(--p-transition-duration,0s), background-color var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), overlay var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
  transform: translate3d(0,0,0);
}
.sheet {
  position: relative;
  display: grid;
  grid-template: auto/var(--p-spacing-fluid-sm) minmax(0,1fr) var(--p-spacing-fluid-sm);
  gap: var(--p-spacing-fluid-md) calc(var(--p-spacing-fluid-lg) - var(--p-spacing-fluid-sm));
  padding-top: var(--p-spacing-fluid-md);
  padding-bottom: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md));
  align-content: flex-start;
  transform: translate3d(0,0,0);
  color: var(--p-color-primary);
  background: var(--_p-dialog-a);
  opacity: 1;
  transition: opacity var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in), transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in);
  width: 100%;
  align-self: flex-end;
  margin-block-start: var(--p-spacing-fluid-lg);
  border-top-left-radius: var(--p-radius-3xl);
  border-top-right-radius: var(--p-radius-3xl);
  clip-path: inset(0 round var(--p-radius-3xl) var(--p-radius-3xl) 0 0);
}
.dismiss {
  all: unset;
  box-sizing: border-box;
  display: grid;
  place-items: center;
  padding: 6px;
  border-radius: var(--p-radius-full);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: var(--p-spacing-fluid-sm);
  margin-top: calc(-1 * var(--p-spacing-fluid-md) + var(--p-spacing-fluid-sm));
  margin-inline-end: var(--p-spacing-fluid-sm);
  place-self: flex-start flex-end;
  filter: invert(1) brightness(1.02);
}
.dismiss:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.dismiss::before {
  content: "";
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m18 6.706-5.294 5.294 5.294 5.294-.706.706-5.294-5.294-5.294 5.294-.706-.706 5.294-5.294-5.294-5.294.706-.706 5.294 5.294 5.294-5.294z"/></svg>') center/contain no-repeat;
  mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m18 6.706-5.294 5.294 5.294 5.294-.706.706-5.294-5.294-5.294 5.294-.706-.706 5.294-5.294-5.294-5.294.706-.706 5.294 5.294 5.294-5.294z"/></svg>') center/contain no-repeat;
  background: currentColor;
}
.dismiss span {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .sheet {
    border-top: 2px solid CanvasText;
  }
  .dismiss {
    forced-color-adjust: none;
    background: Canvas;
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
  .dismiss:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background-color: var(--p-color-contrast-high);
  }
@media(forced-colors:active) {
    .dismiss:hover {
      background: Canvas;
    }
}

}
"
`;

exports[`getComponentCss() > should return correct css for open: true, background: surface and dismissButton: true 1`] = `
":host {
  display: contents;
  --ref-p-sheet-pt: var(--p-spacing-fluid-md) !important;
  --ref-p-sheet-pb: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md)) !important;
  --ref-p-sheet-px: var(--p-spacing-fluid-lg) !important;
  --pds-internal-grid-outer-column: calc(var(--p-spacing-fluid-lg) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(var(--p-spacing-fluid-lg) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_p-dialog-a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  all: unset;
  position: fixed;
  inset: 0;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  user-select: text;
  outline: 0;
  width: 100dvw;
  height: 100dvh;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  transition: visibility 0s linear var(--p-transition-duration,0s), width 0s linear var(--p-transition-duration,0s), height 0s linear var(--p-transition-duration,0s), background-color var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in);
  overlay: none;
}
dialog:modal {
  overlay: auto;
}
dialog::backdrop {
  display: none;
}
@supports (overlay: auto) and (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration,0s), width 0s linear var(--p-transition-duration,0s), height 0s linear var(--p-transition-duration,0s), background-color var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), overlay var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
  transform: translate3d(0,0,0);
}
.sheet {
  position: relative;
  display: grid;
  grid-template: auto/var(--p-spacing-fluid-sm) minmax(0,1fr) var(--p-spacing-fluid-sm);
  gap: var(--p-spacing-fluid-md) calc(var(--p-spacing-fluid-lg) - var(--p-spacing-fluid-sm));
  padding-top: var(--p-spacing-fluid-md);
  padding-bottom: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md));
  align-content: flex-start;
  transform: translate3d(0,0,0);
  color: var(--p-color-primary);
  background: var(--_p-dialog-a);
  opacity: 1;
  transition: opacity var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in), transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in);
  width: 100%;
  align-self: flex-end;
  margin-block-start: var(--p-spacing-fluid-lg);
  border-top-left-radius: var(--p-radius-3xl);
  border-top-right-radius: var(--p-radius-3xl);
  clip-path: inset(0 round var(--p-radius-3xl) var(--p-radius-3xl) 0 0);
}
.dismiss {
  all: unset;
  box-sizing: border-box;
  display: grid;
  place-items: center;
  padding: 6px;
  border-radius: var(--p-radius-full);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  background-color: var(--p-color-primary);
  color: var(--p-color-canvas);
  cursor: pointer;
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out), color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: var(--p-spacing-fluid-sm);
  margin-top: calc(-1 * var(--p-spacing-fluid-md) + var(--p-spacing-fluid-sm));
  margin-inline-end: var(--p-spacing-fluid-sm);
  place-self: flex-start flex-end;
  filter: invert(1) brightness(1.02);
}
.dismiss:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.dismiss::before {
  content: "";
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m18 6.706-5.294 5.294 5.294 5.294-.706.706-5.294-5.294-5.294 5.294-.706-.706 5.294-5.294-5.294-5.294.706-.706 5.294 5.294 5.294-5.294z"/></svg>') center/contain no-repeat;
  mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m18 6.706-5.294 5.294 5.294 5.294-.706.706-5.294-5.294-5.294 5.294-.706-.706 5.294-5.294-5.294-5.294.706-.706 5.294 5.294 5.294-5.294z"/></svg>') center/contain no-repeat;
  background: currentColor;
}
.dismiss span {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(forced-colors:active) {
  .sheet {
    border-top: 2px solid CanvasText;
  }
  .dismiss {
    forced-color-adjust: none;
    background: Canvas;
    box-shadow: inset 0 0 0 2px ButtonBorder;
    color: ButtonText;
  }
  .dismiss:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  .dismiss:hover {
    background-color: var(--p-color-contrast-high);
  }
@media(forced-colors:active) {
    .dismiss:hover {
      background: Canvas;
    }
}

}
"
`;
